Finishing up basic notes and attachments functionality in angular

--- a/web/src/main/resources/META-INF/piecework/templates/SearchResults.form.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/SearchResults.form.template.html
@@ -34,6 +34,11 @@
 <script src="../static/js/vendor/ui-bootstrap-0.6.0.min.js"></script>
 <script src="../static/js/vendor/ui-bootstrap-tpls-0.6.0.js"></script>
 <script src="../static/js/vendor/moment.min.js"></script>
+<script src="../static/js/vendor/jquery.iframe-transport.js"></script>
+<script src="../static/js/vendor/jquery.fileupload.js"></script>
+<script src="../static/js/vendor/jquery.fileupload-process.js"></script>
+<script src="../static/js/vendor/jquery.fileupload-validate.js"></script>
+<script src="../static/js/vendor/jquery.fileupload-angular.js"></script>
 <script src="../static/ng/js/form.js"></script>
 </body>
 </html>
