Adding back context to angular form and form-list

--- a/web/src/main/resources/META-INF/piecework/templates/SearchResults.form.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/SearchResults.form.template.html
@@ -39,6 +39,7 @@
 <script src="../static/js/vendor/jquery.fileupload-process.js"></script>
 <script src="../static/js/vendor/jquery.fileupload-validate.js"></script>
 <script src="../static/js/vendor/jquery.fileupload-angular.js"></script>
+<script id="piecework-context-script"></script>
 <script src="../static/ng/js/form.js"></script>
 </body>
 </html>
