--- a/web/src/main/webapp/static/ng/views/form-list.html
+++ b/web/src/main/webapp/static/ng/views/form-list.html
@@ -1,6 +1,7 @@
 <div class="navbar main-navbar">
     <div class="user-information">
         <div id="user-information-name" class="user-information-name pull-right">
+            {{context.user.displayName}}
         </div>
     </div>
 
