Fixes to allow debug identity to show other user ids

--- a/web/src/main/resources/META-INF/piecework/templates/IndexView.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/IndexView.template.html
@@ -11,7 +11,7 @@
 </head>
 </head>
 <body role="application">
-    <div class="navbar navbar-fixed-top main-navbar">
+    <div class="navbar main-navbar">
         <div class="user-information">
             <div id="user-information-name" class="user-information-name pull-right">
             </div>
